feat: Implement Handlebars suggestion system, add `style` and `tbody` Tiptap nodes, and enable style attributes for the `col` node.

--- a/editor.html
+++ b/editor.html
@@ -1,2 +1,31 @@
-<span style="font-family: &quot;Old Standard TT&quot;; font-weight: bold;">BIOLOGY</span>
-<span style="font-family: &quot;Old Standard TT&quot;;">PERIOD 1</span><br class="ProseMirror-trailingBreak">
+<table class="no-hband no-vband docx_table6" style="width: 564pt; text-align: left; table-layout: auto;">
+   <colgroup>
+      <col style="min-width: 25px;">
+      <col style="min-width: 25px;">
+   </colgroup>
+   <tbody>
+      <tr style="height: 65.3pt;">
+         <td colspan="1" rowspan="1"
+            style="border-width: 1pt 1pt 1.5pt; border-style: solid; border-color: rgb(255, 255, 255) rgb(255, 255, 255) rgb(0, 0, 0); background-color: inherit; padding: 5pt; vertical-align: top;">
+            <p style="line-height: 1;"><span><span><span
+                        style="display: inline-block; position: relative; text-indent: 0px; width: 59.48pt; height: 59.48pt;"><img
+                           src="blob:http://localhost:3000/1d19360e-5b3c-4e68-95ab-f4e84b228f8f" contenteditable="false"
+                           draggable="true"
+                           style="position: relative; left: 0pt; top: 0pt; width: 59.48pt; height: 59.48pt;"></span></span></span><span></span><br
+                  class="ProseMirror-trailingBreak"></p>
+         </td>
+         <td colspan="1" rowspan="1"
+            style="border-width: 1pt 1pt 1.5pt; border-style: solid; border-color: rgb(255, 255, 255) rgb(255, 255, 255) rgb(0, 0, 0); background-color: inherit; padding: 5pt; vertical-align: top;">
+            <p style="line-height: 1.15;"><span style="font-size: 16pt;"><strong><span
+                        style="font-weight: bold; min-height: 16pt; font-size: 16pt;">Demo Diagnostic
+                        Center</span></strong></span><br class="ProseMirror-trailingBreak"></p>
+            <p style="line-height: 1.15;"><span style="font-size: 13pt;"><span
+                     style="min-height: 13pt; font-size: 13pt;">From somewhere - 1230</span></span><br
+                  class="ProseMirror-trailingBreak"></p>
+            <p style="line-height: 1.15;"><span style="font-size: 13pt;"><span
+                     style="min-height: 13pt; font-size: 13pt;">Mob: 019XXXXXX</span></span><br
+                  class="ProseMirror-trailingBreak"></p>
+         </td>
+      </tr>
+   </tbody>
+</table>
