--- a/preview.html
+++ b/preview.html
@@ -1,2 +1,26 @@
-<span style="font-family: &quot;Old Standard TT&quot;; font-weight: bold;">BIOLOGY</span>
-<span style="font-family: &quot;Old Standard TT&quot;;"> PERIOD 1 </span>
+<table class="no-hband no-vband docx_table6" style="width: 564pt; text-align: left; table-layout: auto;">
+   <colgroup>
+      <col style="width: 84pt;">
+      <col style="width: 480pt;">
+   </colgroup>
+   <tbody>
+      <tr style="height: 65.3pt;">
+         <td
+            style="border-width: 1pt 1pt 1.5pt; border-style: solid; border-color: rgb(255, 255, 255) rgb(255, 255, 255) rgb(0, 0, 0); background-color: inherit; padding: 5pt; vertical-align: top;">
+            <p style="line-height: 1;"><span><span
+                     style="display: inline-block; position: relative; text-indent: 0px; width: 59.48pt; height: 59.48pt;"><img
+                        src="blob:http://localhost:3000/1d19360e-5b3c-4e68-95ab-f4e84b228f8f"
+                        style="position: relative; left: 0pt; top: 0pt; width: 59.48pt; height: 59.48pt;"></span></span><span></span>
+            </p>
+         </td>
+         <td
+            style="border-width: 1pt 1pt 1.5pt; border-style: solid; border-color: rgb(255, 255, 255) rgb(255, 255, 255) rgb(0, 0, 0); background-color: inherit; padding: 5pt; vertical-align: top;">
+            <p style="line-height: 1.15;"><span style="font-weight: bold; min-height: 16pt; font-size: 16pt;">Demo
+                  Diagnostic Center</span></p>
+            <p style="line-height: 1.15;"><span style="min-height: 13pt; font-size: 13pt;">From somewhere - 1230</span>
+            </p>
+            <p style="line-height: 1.15;"><span style="min-height: 13pt; font-size: 13pt;">Mob: 019XXXXXX</span></p>
+         </td>
+      </tr>
+   </tbody>
+</table>
